Updated to most recent version which adds community data

--- a/paper/pnas-new.cls
+++ b/paper/pnas-new.cls
@@ -206,7 +206,7 @@
 \pagestyle{fancy}          % Enables the custom headers/footers
 
 \fancypagestyle{firststyle}{
-   \fancyfoot[R]{\footerfont PNAS\hspace{7pt}|\hspace{7pt}\textbf{\today}\hspace{7pt}|\hspace{7pt}vol. XXX\hspace{7pt}|\hspace{7pt}no. XX\hspace{7pt}|\hspace{7pt}\textbf{\thepage\textendash\pageref{LastPage}}}
+   \fancyfoot[R]{\footerfont PNAS\hspace{7pt}|\hspace{7pt}\textbf{\today}\hspace{7pt}|\hspace{7pt}vol. 1\hspace{7pt}|\hspace{7pt}no. 1\hspace{7pt}|\hspace{7pt}\textbf{\thepage\textendash\pageref{LastPage}}}
    \fancyfoot[L]{\footerfont\@ifundefined{@doi}{}{\@doi}}
 }
 
@@ -233,8 +233,8 @@
 
 \titleformat{\section}
   {\large\sffamily\bfseries}
-  {\thesection.}
-  {0.5em}
+  {}
+  {0em}
   {#1}
   []
 \titleformat{name=\section,numberless}
@@ -245,14 +245,14 @@
   []  
 \titleformat{\subsection}[runin]
   {\sffamily\bfseries}
-  {\thesubsection.}
-  {0.5em}
+  {}
+  {0em}
   {#1. }
   []
 \titleformat{\subsubsection}[runin]
   {\sffamily\small\bfseries\itshape}
-  {\thesubsubsection.}
-  {0.5em}
+  {}
+  {0em}
   {#1. }
   []    
 \titleformat{\paragraph}[runin]
